<resources>
    <string name="app_name">Cover Genius</string>
    <string name="welcome_scrn">welcome_scrn</string>
    <string name="welcome">Welcome</string>
    <string name="click_here_to_register">Click Here to Register</string>
    <string name="explore">Explore</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_continuing">By continuing I agree to covergenius</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="register_here">Register Here</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_msg">We\'ll Send reset instruction to this \n  email if it is attached to an account</string>
    <string name="_continue">Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="things">Things You Can Insure</string>
    <string name="travel">Travel</string>
    <string name="demo_conent"> start your speech by greeting\nthe audience, before giving an\noverview of the event</string>
    <string name="know_more"><![CDATA[Know More >>]]></string>
    <string name="things_you_can_insure">THINGS YOU CAN INSURE</string>
    <string name="travel_insurance">Travell Insurance Just got Better with Covergenius</string>
    <string name="more_than_1000_000">More than 1000,000 preperty casualty insurance professionals subscribe too...</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="notification">notification</string>
    <string name="home">home</string>
    <string name="cancel_inspection">cancel inspection</string>
    <array name="lorem_ipsum">
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
        <item>Lorem Ipsum</item>
    </array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>20</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="years">
        <item>1960</item>
    </string-array>
</resources>
